k8s/deploy/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepdream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepdream
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: deepdream
    spec:
      containers:
        - image: hubbeking/deepdream-docker:latest
          imagePullPolicy: Always
          name: deepdream-api
          volumeMounts:
            - name: deepdream-inputs
              mountPath: /opt/deepdream/inputs
            - name: deepdream-outputs
              mountPath: /opt/deepdream/outputs
        - image: hubbeking/deepdream-docker:latest
          imagePullPolicy: Always
          name: deepdream-worker
          command: ["celery", "-A", "tasks", "worker", "--loglevel=INFO", "--concurrency=1"]
          volumeMounts:
            - name: deepdream-inputs
              mountPath: /opt/deepdream/inputs
            - name: deepdream-outputs
              mountPath: /opt/deepdream/outputs
      volumes:
        - name: deepdream-inputs
          emptyDir: {}
        - name: deepdream-outputs
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepdream-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepdream-queue
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: deepdream-queue
    spec:
      containers:
        - image: rabbitmq:latest
          imagePullPolicy: Always
          name: deepdream-queue
