k8s/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deepdream
  annotations:
    nginx.ingress.kubernetes.io/app-root: /upload
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: deepdream-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Deepdream Service"
spec:
  tls:
    - hosts:
      - deepdream.example.com
      secretName: deepdream-example-tls
  rules:
    - host: deepdream.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: deepdream
              servicePort: 8000
